[metadata]
name = rbo-mcl
version = 0.0.1
author = Joeri van Strien
author_email = joerivanstrien@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas
    rbo
        
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    compact = rbomcl.run_compact:run