[metadata]
name = compact-bio
version = 0.0.3
author = Joeri van Strien
author_email = joerivanstrien@gmail.com
description = CompaCt -- comparative clustering of interaction data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joerivstrien/compact-bio
licence = GNU General Public Licence v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/joerivstrien/compact/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = compact
python_requires = >=3.7
install_requires = 
    numpy
    pandas
    rbo

[options.extras_require]
test =
    pytest
    coverage
    pytest-cov

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    compact = compact.run_compact:run